# rs-terminal

./: Cargo.toml  README.md
src/: command.rs  main.rs
src/utils/: mod.rs
